k8s/mongodb-statefullset.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mongodb
#   namespace: chat-app
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: mongodb
#   template:
#     metadata:
#       labels:
#         app: mongodb
#     spec:
#       containers:
#       - name: mongodb
#         image: iemafzal/mongodb:v1
#         ports:
#         - containerPort: 27017
#         startupProbe:
#           tcpSocket:
#             port: 27017
#           # Mongo init can take a bit on first run; allow enough time before restarts.
#           initialDelaySeconds: 10
#           periodSeconds: 5
#           failureThreshold: 40
#         readinessProbe:
#           tcpSocket:
#             port: 27017
#           initialDelaySeconds: 20
#           periodSeconds: 10
#           failureThreshold: 6
#         livenessProbe:
#           tcpSocket:
#             port: 27017
#           initialDelaySeconds: 60
#           periodSeconds: 15
#           failureThreshold: 4
#         env:
#         - name: MONGO_INITDB_ROOT_USERNAME
#           value: root
#         - name: MONGO_INITDB_ROOT_PASSWORD
#           value: admin
#         volumeMounts:
#         - name: mongo-data
#           mountPath: /data/db
#       volumes:
#       - name: mongo-data
#         persistentVolumeClaim:
#           claimName: mongo-pvc

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: chat-app
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: iemafzal/mongodb:v1
        ports:
        - containerPort: 27017

        startupProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 40

        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 20
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 60
          periodSeconds: 15

        volumeMounts:
        - name: mongo-data
          mountPath: /data/db

  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
